z-index fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,5 +13,5 @@ header {
 nav {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 100;
 }
